--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -161,7 +161,8 @@ Copyright \copyright\ \the\year\ \thanklessauthor
 
 \newcommand{\director}{Jeremy}
 \newcommand{\coordinator}{\director}
-\newcommand{\labmeetingtime}{Tuesdays at 12:30pm}
+\newcommand{\labmeetingtime}{Thursdays at 12:30pm}
+\newcommand{\meeting}{\href{https:context-lab.youcanbook.me}{YouCanBook.me}}
 
 \cleardoublepage
 \chapter{Introduction}\label{ch:intro} % Adding an asterisk leaves out this chapter from the table of contents
@@ -489,15 +490,13 @@ While there is value to the \textit{italicized} items, we value the
   you can leverage these opportunities into research products that
   you're excited to work on!
 
-\item The most effective and efficient method of conveying information
-  within a research team is face-to-face conversation.  We use the
-  \hyperref[sec: scheduling]{CDL Google calendar} to coordinate formal
-  meetings between lab members.  You can also sign up for meetings
-  with \director~via
-  \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.  We also
-  use Slack to coordinate, share notes/data, etc.  But the
-  \textit{ideal} form of communication in the lab is face-to-face, and
-  it often involves a whiteboard.
+\item The most effective and efficient method of conveying information within a
+research team is face-to-face conversation. We use the \hyperref[sec:
+scheduling]{CDL Google calendar} to coordinate formal meetings between lab
+members. You can also sign up for meetings with \director~via~\meeting. We also
+use Slack to coordinate, share notes/data, etc. But the \textit{ideal} form of
+communication in the lab is face-to-face (or over Zoom), and it often involves
+a whiteboard.
 
 \item Agile research is sustainable research.  Researchers should be
   able to maintain a constant pace indefinitely.  To be sure, we
@@ -512,28 +511,13 @@ While there is value to the \textit{italicized} items, we value the
   Sustainable work habits also promote good communication and
   coordination between project team members.
 
-\item At regular intervals, the team reflects on how to become more
-  effective, then tunes and adjusts its behavior accordingly.  At
-  minimum, all active lab members need to reflect on their projects
-  once each week in your \textit{Weekly Snippet} (defined below).  In
-  addition, you should
-  \href{https://context-lab.youcanbook.me/}{schedule} a 30 minute
-  meeting with \director~at the beginning and end of each term to
-  discuss:
-  \begin{itemize}
-  \item What your goals are for the upcoming term (start-of-term
-    meetings), or what you worked on over the prior term and how well
-    you feel you met your goals (end-of-term meetings).
-  \item Reflections on how things are going in the lab (you will
-    report how things have been going from your perspective, and will
-    receive feedback about how things have been going from \director's
-    perspective).
-  \item Insights you've come to regarding how we can (for your
-    project, as a lab, as a department, etc.) further optimize
-    efficiency or otherwise improve our work environment.
-  \item Any other issues, comments, questions, or concerns that you'd
-    like to check in about.
-  \end{itemize}
+\item At regular intervals, the team reflects on how to become more effective,
+then tunes and adjusts its behavior accordingly. At minimum, all active lab
+members need to reflect on their projects once each week in your \textit{Weekly
+Snippet} (defined below). You should also schedule regular meetings with your
+project team and/or~\director~(via~\meeting) to discuss progress, goals,
+roadblocks, and project logistics. 
+
 \end{enumerate}
 
 \newthought{Papers}
@@ -554,7 +538,7 @@ with a discussion of:
 \item The current status of various components of the project
   (e.g.\ data collection, analyses, figures, interpretation,
   literature review, etc.)
-\item Who is a potential candidate for authorship on the paper
+\item Who the potential candidates for authorship on the paper are
 \end{enumerate}
 
 We draft papers in \LaTeX, either on GitHub or on
@@ -718,12 +702,12 @@ these roles on your project:
   over the team is by definition not its Project
   Coordinator)
 \item Has a leadership role
-\item Will usually be the Lab Coordinator %(\href{mailto:contextualdynamics@gmail.com}{\coordinator})
+\item Will usually be either the Lab Coordinator (note: this position is currently vacant) or \director. %(\href{mailto:contextualdynamics@gmail.com}{\coordinator})
 \end{enumerate}
 
 \item \textbf{Collaborator.}  Collaborators are not formally part of
   the project team and generally will not attend regular meetings as
-  part of the team.  Collaborators do not have a leadership role in
+  part of the team.  Importantly, collaborators do \textit{not} have a leadership role in
   the project.  They may carry out one or more of the
   following roles:
 \begin{enumerate}
@@ -752,16 +736,30 @@ are not normally co-authors.
 
 \newthought{Meetings}
 
-\marginnote{\texttt{TASK:} If you are a senior
-    lab member (lab manager, grad student, or postdoctoral
-    researcher), discuss with \director~at the beginning of each term
-    one thing that you can present at a lab meeting.  Junior lab
-    members (undergraduates) are not obligated to present at lab
-    meetings, but may schedule a time to do so upon request by
-    coordinating with \director.  \textbf{Exception: if you are presenting
-    your work outside of the lab, and if it is the first time you are
-    presenting that project, you \textit{must} do a practice talk for
-    the lab (regardless of whether you are a junior or senior lab member).}}
+Because our lab has largely been operating in a ``hybrid'' mode of work (i.e.,
+partially remote and partially in-person), our meeting schedule and
+requirements have changed from prior years:
+\begin{itemize}
+
+  \item In prior years, we have asked that all lab members meet with \director
+  twice per term (once at the start of the term and once at the end of the
+  term). The purpose of these twice-quarterly check-in meetings was to sync up
+  about goals and progress. These meetings are now optional, and may be
+  scheduled via~\meeting.
+
+  \item In prior years, our weekly lab meetings have been required for all lab
+  members who are able to attend. Our lab meetings are now designated as
+  check-in times for senior lab members and staff.
+
+\item In prior years, lab meetings provided a forum for doing practice
+presentations (poster presentations, talks), soliciting feedback on research
+projects, etc. The lab meeting time (\labmeetingtime) may be re-purposed in
+these ways upon request. If you'd like feedback on your project from the
+broader group, and/or if you'd like to schedule a practice presentation, simply
+message~\director~on Slack. 
+
+\end{itemize}
+
 \noindent  Effective lab communication requires forums for communicating.  As
 described below, we use \href{http://www.slack.com}{Slack} to
 facilitate non-in-person communications, but Slack cannot replace
@@ -770,14 +768,10 @@ in-person interactions as often as possible---ideally several times a
 week for group projects.  We'll have the following regularly scheduled
 meetings:
 \begin{enumerate}
-\item \textbf{Lab meeting.}  We will have, as a lab, a regular weekly
-  1 hour meeting on \textbf{\labmeetingtime}.  The precise
-  format of this meeting varies from week to week according to lab
-  needs and interests. Attendees: all active lab members.
 
 \item \textbf{Project meetings.}  Several of our collaborative
-  projects involve regular coordination with external lab members.
-  These are organized on an \textit{ad hoc} basis for each project.
+  projects involve regular coordination within the lab and/or with external lab members.
+  These are organized on an ad-hoc basis for each project.
   Attendees: all project team members and any other interested active
   lab members.
 
@@ -787,15 +781,6 @@ meetings:
     scheduled on an \textit{ad hoc} basis.  Attendees: all interested
     lab members, any interested member of the Dartmouth community, and
     external collaborators.
-
-\marginnote{\texttt{NOTE:} Each term, you should sign up for a brief beginning-of-term or
-    end-of-term meeting time with \director~via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.}
-
-  \item \textbf{Beginning-of-term and end-of-term meetings.} At the
-    start or end of each term, you should schedule a 15 minute
-    meeting slot with \director~to discuss your research
-    plans, progress, goals, etc.  It is your responsibility to sign up
-    for a slot via \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.
 
     \marginnote{\texttt{NOTE:} Department talks and colloquia are
       listed on the \hyperref[sec: scheduling]{PBS Department Events}
@@ -808,7 +793,7 @@ meetings:
   members.
 
     \item \textbf{Weekly snippets.} Each week, all
-      paid employees must fill out a ``weekly snippet'' Google Form
+      paid employees must fill out a ``weekly snippet'' 
       with brief answers to the following questions:
       \begin{enumerate}
       \item What did you work on over this past week?
@@ -816,15 +801,20 @@ meetings:
       \item What is impeding your progress (if anything)?
       \item Anything else you'd like to add?
       \end{enumerate}
-      Weekly snippets are sent out (via Slack) each Monday at 9 AM.
-      Whereas weekly snippets are required for all paid employees,
-      they are optional for all other lab members.  If you are an
-      unpaid employee but are likely to request a letter of
-      recommendation, weekly snippets are a good way for me to
-      maintain a detailed sense of what you are working on from week
-      to week and how you are progressing over time.  (Virtual)
-      attendees: all paid lab members and any other lab members who
-      want to participate.
+
+Reminders to fill out your weekly snippet are automatically sent out (via
+Slack) each Monday at 9 AM. Whereas weekly snippets are required for all paid
+employees, they are optional for all other lab members. If you are an unpaid
+employee but are likely to request a letter of recommendation, weekly snippets
+are a good way for me to maintain a detailed sense of what you are working on
+from week to week and how you are progressing over time. I'll also refer to
+your snippets during check-in meetings (e.g., to discuss project progress and
+contributions, letters of recommendation, annual reviews or other evaluations,
+etc.) You should submit your snippet using the ``Fill out your snippet!''
+workflow on Slack. You can access this workflow in the \texttt{\#general}
+channel through the Workflows menu (usually near the top left of the window).
+(Virtual) attendees: all paid lab members and any other lab members who want to
+participate. 
 \end{enumerate}
 
 %\newpage
@@ -842,7 +832,11 @@ necessary administrative tasks: \marginnote{\texttt{TASK:} Create
 \item \href{https://context-lab.slack.com}{\textbf{Slack.}}  This is where
   almost all not-in-person lab communications take place.  It provides
   an interface for asking questions, storing notes, and sharing
-  ideas.
+  ideas.  If you have a~\ourschool~NetID you should be able to join the workspace by clicking the link.
+  If you do \textit{not} have a NetID, you'll need to \href{https://services.dartmouth.edu/TDClient/1806/Portal/Requests/ServiceDet?ID=30581}{request one here}.
+  \marginnote{\texttt{TASK:} When you join our Slack workspace, initiate our onboarding process using the ``Join the lab!'' workflow.  You can access this workflow in the \texttt{\#general} channel
+  through the Workflows menu (usually near the top left of the window).  Once you initiate the workflow, you'll be guided through the onboarding process.}
+
 \item \href{https://www.github.com}{\textbf{GitHub.}}
   \marginnote{\texttt{TASK:} If you've never used GitHub (Git) before,
     please work through these \href{https://try.github.io/}{GitHub
@@ -850,27 +844,21 @@ necessary administrative tasks: \marginnote{\texttt{TASK:} Create
     \href{https://github.com/ContextLab/lab-manual/blob/master/resources/cheatsheets/git-cheatsheet.pdf}{Git
       cheat sheet} and this
     \href{https://github.com/ContextLab/lab-manual/blob/master/resources/cheatsheets/workflow-of-version-control.pdf}{Git
-      workflow} sheet when using Git/GitHub at first.}  This is used
+      workflow} sheet when using Git/GitHub at first.  We also maintain a \href{https://www.youtube.com/playlist?list=PLjQYT8Fwp984zMjN5rJChfdI5Z8jtaWww}{set of GitHub tutorials on YouTube}.}  This is used
   to manage all code, papers, grants, presentations, and posters.  In
   other words, anything where it'd be useful to track multiple
   versions, anything that we might ultimately want to release to the
   public, and/or anything that multiple lab members will be
-  collaborating on.  Each project has one or more GitHub repositories.
+  collaborating on.  Each project has one or more GitHub repositories.  You should treat GitHub as a digital version of a ``lab notebook''
+  that contains a formal record of every contribution you make to your projects.  We use GitHub logs to assign credit for ideas, code or writing contributions,
+  determine authorship order, and more.  It is therefore critical that you regularly check in (commit) your work via GitHub so that you receive appropriate credit for your
+  ideas and maintain a continuous traceable log for your project.
 \item \href{https://1password.com/}{\textbf{1Password.}}
   \marginnote{\texttt{TASK:} If you are a senior lab member, request a
     1Password invite from \director.} This platform is used by senior
   lab members to manage secure notes and passwords (e.g.\ shared
   software licenses, card numbers and chart strings, etc.).
-\item \href{http://www.context-lab.com/}{\textbf{Lab website.}}
-  \marginnote{\texttt{TASK:} Submit a photograph (of yourself or some
-    other picture or image that you want to represent you) and a 2-3
-    sentence biography to \coordinator~so that you can be added to the
-    \href{http://www.context-lab.com/people/}{people page} on the lab
-    website.  Alternatively, if you do not wish to be included on the
-    website, send a note to \coordinator~expressing that you do not
-    want to be added to the website.} We use the lab website to
-  distribute research materials, describe ongoing work, and provide
-  information about our work.
+\item 
 \end{enumerate}
 
 Once you've created those accounts, you can ask any questions through
@@ -960,7 +948,6 @@ promote continuity across projects and lab members.  First, make sure
 that your project doesn't already exist (generally this involves
 asking \director).
 
-~
 
 The general steps to starting a project are:
 \begin{enumerate}
@@ -999,8 +986,8 @@ possible.  This keeps notes searchable and visible to all team members
 (except direct messages, which are useful for non-project-related
 private communications between one or more team members).
 
-Note that, as a general rule, you should focus the majority of your
-efforts on one project at a time.  This doesn't mean you need to do
+Note that, as a general rule, \textbf{you should focus the majority of your
+efforts on one project at a time}.  This doesn't mean you need to do
 the same thing every day (each project has many components and, as
 described above, the focus of lab projects will change over time), but
 it gives some sense of how you should be allocating your work time.
@@ -1018,10 +1005,7 @@ you should coordinate this with \director~and your team members.
 \newthought{Scheduling}
 \label{sec: scheduling}
 
-\noindent\marginnote{\texttt{TASK:} Send a Slack direct message to \coordinator~to request
-  invites to each of the calendars below for which you require write access---the links in the
-  lab manual are read-only!  In your request, please specify which
-  calendars you would like write access to.}Our lab's scheduling practices and
+\noindent Our lab's scheduling practices and
 policies are intended to facilitate lab member interactions between
 ourselves, our collaborators, and our experimental participants.
 There are three basic tools the lab uses to organize and schedule
@@ -1030,31 +1014,26 @@ events:
 \item \href{http://calendar.google.com}{Google Calendar}:
   \begin{itemize}
   \item We use the
-    \href{https://calendar.google.com/calendar/ical/5ta50cfv4uih0a0k8m2di9dhjo\%40group.calendar.google.com/private-ff1338ddce84ac37d5ab682cd94e7f69/basic.ics}{main
+    \href{https://calendar.google.com/calendar/embed?src=5ta50cfv4uih0a0k8m2di9dhjo%40group.calendar.google.com&ctz=America%2FNew_York}{main
       lab calendar} (``Contextual Dynamics Lab'') to keep track of lab-wide events including lab
     meetings, conferences, and activities.  Note: write access is
     granted only to senior lab members-- i.e., lab staff and graduate students.
   \item We use the
-    \href{https://calendar.google.com/calendar/ical/dgcv8l8a8s10hfg2s5h0qec0q0\%40group.calendar.google.com/private-4810aed94f818d5748045447ab46c62d/basic.ics}{CDL
+    \href{https://calendar.google.com/calendar/embed?src=dgcv8l8a8s10hfg2s5h0qec0q0%40group.calendar.google.com&ctz=America%2FNew_York}{CDL
       resources calendar} to coordinate the use of shared rooms and
     equipment, such as testing rooms, our EEG systems, eye-tracker,
     hospital equipment, software licenses, etc.  Request write access
     if you may require use of lab equipment.
   \item We use the
-    \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab
+    \href{https://calendar.google.com/calendar/embed?src=h1j06dohcg7v1g2o5tkb7ijhvs%40group.calendar.google.com&ctz=America%2FNew_York}{out-of-lab
       calendar} to keep track of known absences (e.g. illness, travel,
     holidays, etc.).  \marginnote{\texttt{TASK:} If you are a graduate
       or undergraduate student, please add your schedule to the CDL
       class schedule calendar at the beginning of each term.}  All
     full-time lab members should request write access.
-  \item We use the
-    \href{https://calendar.google.com/calendar/ical/v2selomg4o6aobua7g922aamqc\%40group.calendar.google.com/private-4377dd542d0d1f6226c9657955b778c5/basic.ics}{CDL
-      class schedule calendar} to keep track of course schedules of
-    grad students and undergraduates. All student lab members should request
-    write access.
-  \item We use the \href{https://calendar.google.com/calendar/ical/j6noo2tqahpsoq9na1h16paf3s\%40group.calendar.google.com/private-c3d75bea1ab4605947353d159d3dcd05/basic.ics}{DHMC meetings
+  \item We use the \href{https://calendar.google.com/calendar/embed?src=j6noo2tqahpsoq9na1h16paf3s%40group.calendar.google.com&ctz=America%2FNew_York}{DHMC meetings
   calendar} to keep track of important events and meetings at DHMC.
-  \item We use the \href{https://calendar.google.com/calendar/ical/mp1bujb39ud5bgmmnq9r8dbiuk\%40group.calendar.google.com/private-8a3c6919c30e7b118ab3a4fd23aad6cf/basic.ics}{PBS department events calendar} to keep track of talks and events happening in the department.
+  \item We use the \href{https://calendar.google.com/calendar/embed?src=c_31ckainhaqlmhk4hkc633fs9ho%40group.calendar.google.com&ctz=America%2FNew_York}{PBS department events calendar} to keep track of talks and events happening in the department.
   \item You may also choose to create project-specific Google
     Calendars, inviting project team members.
   \item When you add an event (in any lab calendar), it is important
@@ -1070,29 +1049,27 @@ events:
 \end{itemize}
 \item \href{http://www.doodle.com}{Doodle},
   \href{http://www.when2meet.com}{When2Meet}, and
-  \href{https://context-lab.youcanbook.me/}{YouCanBook.Me}.  We use
+  \meeting.  We use
   Doodle and When2Meet to converge on mutually good meeting times that
   fit (as well as possible) with everyone's busy schedules.  Doodle is
   most useful for selecting a date from a large number of options, and
   When2Meet is most useful for selecting a specific time on a
-  relatively small number of dates.  YouCanBook.Me is used to sign up
+  relatively small number of dates.  \meeting~is used to sign up
   for meeting slots with \director.  You can book a meeting in a free
   slot through YouCanBook.Me at any time if you would like to meet
-  with \director.  Most meetings with \director~happen on Tuesdays.
+  with \director.  Most meetings with \director~happen on Thursdays.
 \end{itemize}
 
  \newthought{Attendance policy}
 
  \noindent In general, we expect full time employees to be in the lab
  during ``standard'' working hours---roughly between 9 AM and 5
- PM.\marginnote{\texttt{NOTE:} Our lab is currently operating remotely
-   due to the ongoing global pandemic.  During this time, and until
+ PM.\marginnote{\texttt{NOTE:} Our lab is currently operating in a hybrid remote/in-person format.  During this time, and until
    further notice, you are never expected to be physically \textit{in}
    the lab; you should interpret all references to being ``in'' the
    lab as being ``available'' (e.g., doing lab-related work, signed
    into slack, an so on).  Any in-person lab visits should be
-   coordinated with \director~and must comply with Dartmouth's
-   \href{https://covid.dartmouth.edu/}{COVID safety protocols}.}  The
+   coordinated with \director.}  The
  precise range of hours you work is less important to us than putting
  in an effort to help form a cohesive lab culture where lab members
  can interact in person to share ideas, leverage expertise, solve
@@ -1164,16 +1141,16 @@ events:
   non-illness-related emergency, simply give as much notice and
   information as possible.
 
-\item You are expected to attend all lab meetings and other regularly
+\item You are expected to attend all lab-related meetings and other regularly
   scheduled meetings that are directly relevant to your work in the
-  lab.
+  lab (assuming you are feeling well and have not made prior arrangements to the contrary).
 
-\item If you are scheduled to present at a conference (i.e.\ you
+\item If you are scheduled to present at a conference (i.e., you
   submit an abstract and it is accepted as a talk or poster), you are
   expected to attend the conference to present your work.  In the
   extremely rare event that an emergency situation arises that would
   prevent you from presenting as scheduled, you are expected to make
-  alternative arrangements (e.g.\ by arranging for a co-author to
+  alternative arrangements (e.g., by arranging for a co-author to
   present in your place).
 
 \item You are strongly encouraged (but never required) to attend
@@ -1193,21 +1170,46 @@ insurance, dental insurance, life insurance, etc.  You can read more
 about the comprehensive benefits package
 \href{http://www.dartmouth.edu/~hrs/benefits/}{here}.
 
-Dartmouth also sponsors various health-benefits programs (for all
-members of the Dartmouth community).  For example, you are likely
-eligible to get a free (or subsidized) fitness tracker, fitness
-equipment, race fees, gym membership, etc.  You can also earn cash (up
-to \$400/year) for meeting your fitness goals.  Go1
-\href{http://join.virginpulse.com/dartmouth/}{here} to learn more or
-sign up for this program.
+Dartmouth also sponsors various health-benefits programs (for all members of
+the Dartmouth community). For example, you are likely eligible to get a free
+(or subsidized) fitness tracker, fitness equipment, race fees, gym membership,
+etc. You can also earn cash (up to \$400/year) for meeting your fitness goals.
+Go \href{http://join.virginpulse.com/dartmouth/}{here} to learn more or sign up
+for this program.
 
-If you are a student employee, you may be paid or unpaid.  In general,
-full-time student employees are paid and part-time student employees
-are unpaid until they have been a full-time employee for at least one
-term.  Your precise level of compensation will depend on your
-position, how your work in the lab is funded, your prior research
-experience, etc.  If you have comments, questions, or concerns about
-your compensation, please discuss them with \director.
+If you are an undergraduate student employee, you may be paid or unpaid (i.e., volunteer).
+\ourschool~offers several options for funding your work. The most commonly used
+funding mechanisms are through the
+\href{https://students.dartmouth.edu/ugar/}{Undergraduate Advising \& Research
+(UGAR)} program. The program provides funding for undergraduate researchers to
+carry out part-time research while enrolled in courses at~\ourschool, or to
+carry out full-time research during off-terms (while not taking courses). The
+\href{https://neukom.dartmouth.edu/}{Neukom Institute} also provides several
+funding opportunities for part-time and full-time research. If you wish to
+apply for funding through any of these programs (or through other programs),
+please coordinate your application with~\director. It is your responsibility to
+stay on top of application deadlines, program requirements, and so on.
+
+If you are a Master's student employee, you are likely to work in the lab for
+course credit as part of your training program. This work is generally unpaid.
+
+If you are a doctoral student, you will likely receive an annual stipend and
+tuition waiver that is intended to compensate you (in part) for your work in
+the lab. If this applies to you, you should receive information about your
+compensation and benefits when you enter our PhD program. Although doctoral
+students' stipends are normally guaranteed for five years, all students are
+expected monitor the \texttt{\#grants} channel on Slack and/or seek out other
+funding opportunities independently.
+
+In general: we value all lab members' efforts and contributions, and you should
+expect to be compensated for your work. Your compensation may take the form of
+course credit, wages, benefits, use of resources, mentorship, etc. By the same
+token, you should be proactive about seeking out opportunities for compensation
+(financial, academic, or otherwise)-- we are a small lab with limited
+resources, and as a member of the team you are expected to help out by doing
+your part to secure funding to cover your expenses. If you have comments,
+questions, or concerns about your compensation, please discuss them with
+\director.
 
 \newthought{Interpersonal issues}
 
@@ -1227,16 +1229,18 @@ interpersonal situation that you feel unable to resolve on your own.
 You have many resources at your disposal to help get you back on
 track.
 
-The \href{http://www.dartmouth.edu/~hrs/}{Office of Human Resources}
-provides assistance and resources to all faculty, staff, retirees, and
-prospective employees. The
-\href{http://www.dartmouth.edu/~seo/}{Student Employment Office}
-provides a similar suite of services to student employees.  The
-\href{http://www.dartmouth.edu/~ombuds/}{Dartmouth Ombuds Office} also
-provides confidential and informal assistance in resolving concerns
-related to interpersonal issues.  Please also see the section on
-\hyperref[sec:interpersonal]{resources for resolving interpersonal
-  issues}.
+The \href{http://www.dartmouth.edu/~hrs/}{Office of Human Resources} provides
+assistance and resources to all faculty, staff, retirees, and prospective
+employees. The \href{http://www.dartmouth.edu/~seo/}{Student Employment Office}
+provides a similar suite of services to student employees. The
+\href{http://www.dartmouth.edu/~ombuds/}{Dartmouth Ombuds Office} also provides
+confidential and informal assistance in resolving concerns related to
+interpersonal issues. Please also see the section on
+\hyperref[sec:interpersonal]{resources for resolving interpersonal issues}.
+\ourschool's
+\href{https://sexual-respect.dartmouth.edu/compliance/title-ix/about-title-ix}{Title
+IX Office} provides resources pertaining to issues related to sex or
+gender-based discrimination.
 
 
  \newthought{Lab resources}
@@ -1263,6 +1267,7 @@ related to interpersonal issues.  Please also see the section on
  funds should be discussed with \director.
 
  \subsection{Computers}
+
  All lab members need a computer to get their work done.  We generally
  prefer to use Macs, as this maximizes compatibility across lab
  members.  Depending on your expected role in the lab and the
@@ -1285,8 +1290,7 @@ related to interpersonal issues.  Please also see the section on
  We use Discovery for our most computationally intensive work.
  \href{https://rc.dartmouth.edu/index.php/discovery-overview/accessing-the-cluster}{This
    link} contains instructions for creating an account and
- accessing % potentially add link to cluster tutorial when completed
- the Discovery cluster.  Our suggested workflow is to do non-intensive
+ accessing the Discovery cluster.  Our suggested workflow is to do non-intensive
  computations and analyses on your personal desktop or laptop
  computer, and to offload more intensive analyses to Discovery.  The
  lab's code repository includes
@@ -1407,7 +1411,7 @@ publicly).
  subject payments for lab research projects will in most cases be
  fully covered by the lab (see the \texttt{NOTE}).  Subject payment
  guidelines are generally found in the IRB approval documentation
- relevant to your project.  For Mechanical Turk experiments, a subject
+ relevant to your project.  For Mechanical Turk (or other online) experiments, a subject
  payments budget should be approved prior to beginning the experiment.
  Cash payments may be made via petty cash, which is managed by
  \coordinator.
@@ -1430,16 +1434,13 @@ them.
 \item For issues related to our lab's fileserver, seek assistance from
   \director.
 
-\item For issues related to Slack, send a direct message to @Ryan Sokol.
+\item For issues related to Slack, send a direct message to \texttt{@Ryan Sokol}.
 
 \item For issues with other lab-owned equipment (e.g.~computers,
   research equipment, etc.) \coordinator~or the senior lab member
   actively using the equipment should be your first-sought resource.
 
-\item For issues related to the Discovery computing cluster,
-  contact \href{mailto:John.P.Hudson@Dartmouth.edu}{John Hudson}.
-
-\item For other general Dartmouth-specific IT questions or issues,
+\item For issues related to the Discovery computing cluster, or for general \ourschool-specific IT questions or issues, contact
   \href{help@dartmouth.edu}{open a ticket} with the Information,
   Technology, and Consulting office, or contact
   \href{mailto:Andrew.C.Knutsen@Dartmouth.edu}{Andrew Knutsen}.
@@ -1593,7 +1594,7 @@ feel you need access to RAPPORT then let \director~know.
    When you run an experimental participant, you must have them sign a
    consent form.  After each day of testing (or more frequently), you
    should give all signed consent forms to \coordinator.  Consent
-   forms are kept in a locked file cabinet in \director 's office.
+   forms are kept in a locked file cabinet in \director's office.
 
    All experimental data must be stored securely, as per IRB
    guidelines.  All lab computers employ disk encryption and password
@@ -1657,6 +1658,14 @@ feel you need access to RAPPORT then let \director~know.
 \item Goutham Veeramachaneni (2022 -- )
 \item Zachary Somma (2022 -- )
 \item Dawson Haddox (2022 -- )
+\item Alexander Marcoux (2022 -- )
+\item Jessna Brar (2022 -- )
+\item Wenhua Liang (2022 -- )
+\item Megan Liu (2023 -- )
+\item Yue Zhuo (2023 -- )
+\item Francisca O. Fadairo (2023 -- )
+\item Ameer Talha Yasser (2023 -- )
+
 \end{list}
 \end{multicols}
 
@@ -1742,6 +1751,7 @@ feel you need access to RAPPORT then let \director~know.
 \item Daniel Ha (2021)
 \item Shane Park (2019 -- 2021)
 \item Tehut Biru (2020 -- 2021)
+\item Molly McQuoid (2022)
 
 \end{list}
 \end{multicols}
@@ -1754,7 +1764,7 @@ feel you need access to RAPPORT then let \director~know.
    \begin{todolist}
      \item I have joined the lab's Slack account and worked through the
     orientation workflow to share my accounts and information with
-    \director.  (Click the lightning bolt button in the lower left of
+    \director.  (Click the Workflows menu in
     the \#general channel and select `Join the lab!' to start the
     onboarding process.)
     \item I agree to check Slack
@@ -1776,8 +1786,7 @@ feel you need access to RAPPORT then let \director~know.
   \texttt{pdflatex} \textbf{twice}, and have ensured that (a) the PDF compiled
   without errors, and (b) the table of contents was generated correctly.
   \item I have access to the following lab calendars:
-    Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
-    schedule (if applicable), DHMC Meetings (if
+    Contextual Dynamics Lab, Out of lab, CDL Resources, DHMC Meetings (if
     applicable), and PBS department events.
   \item I have been added to the lab's 1password account if I am a
     senior lab member, or I have not been added because I am a junior
@@ -1796,10 +1805,8 @@ feel you need access to RAPPORT then let \director~know.
     worded biography, to be included on the lab website.
     Alternatively, I indicated (via Slack message to \coordinator) my
     preference to not be included on the lab website.
-  \item I agree to regularly attend lab meetings (unless I have a
+  \item If I am a senior lab member, I agree to regularly attend lab meetings (unless I have a
     course conflict and have informed \director).
-  \item I agree to set up a beginning-of-term or end-of-term meeting
-    with \director~at least once per term.
     \item I agree to send \director~regular updates regarding my
       progress and work, including weekly snippets, meetings, Slack
       discussions, and/or GitHub updates.
